--- a/app/globals.css
+++ b/app/globals.css
@@ -21,3 +21,11 @@ body {
   position: absolute;
   z-index: 1;
 }
+
+.zoom-on-hover {
+  transition: transform 0.3s ease;
+}
+
+.zoom-on-hover:hover {
+  transform: scale(1.2);
+}
